# blitz-2025

./: Notebook_trabajo_grupal.ipynb  README.md  main.py  obtencion.py  pyproject.toml  sample.py  trabajo_individual.ipynb
data/: sample.csv  sample_preprocessed.csv
