[project]
name = "blitz-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastparquet>=2026.3.0",
    "gdown>=6.0.0",
    "jupyter>=1.1.1",
    "lxml>=6.0.4",
    "matplotlib>=3.10.8",
    "pandas>=3.0.2",
    "pyarrow>=24.0.0",
    "seaborn>=0.13.2",
]
